--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shab Design
-logo: /assets/images/Logo Shab-Design-01.svg
+logo: /assets/images/Logo_noname-01.svg
 baseurl: /awesome-jekyll-theme
 author:
   name: Shabrina
