--- a/_config.yml
+++ b/_config.yml
@@ -27,9 +27,10 @@ collections:
 ##
 contact_channels_section: true
 contact_channels:
-  # email: "example@example.cl"
-  github: "https://github.com/a-chacon"
-  # telegram: "https://t.me/"
+  email: "shabrina.m13@gmail.com"
+  github: "https://github.com/shabdesign"
+  telegram: "https://t.me/shab_design"
+  x: "https://x.com/bekwerja"
   # stackoverflow: "https://stackoverflow.com"
   # discord: "https://discord.com/"
   # mastodon: "https://lile.cl/"
