--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ description: Aspiring UX Researcher & Designer with a background in visual desig
 ##
 typewriter_effect: true
 
+markdown: kramdown
+
 ##
 # Collections configuration
 ##
