--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shab Design
-logo: /assets/images/Logo Shab-Design Brown-02.svg
+logo: /assets/images/Logo_Brown-02.svg
 baseurl: /awesome-jekyll-theme
 markdown: kramdown
 author:
