--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Shab Design
 logo: /assets/images/Logo Shab-Design Brown-02.svg
-baseurl: /awesome-jekyll-theme
+baseurl: ""
 author:
   name: Shabrina
   email: shabrina.m13@gmail.com
